Better port and cleanup

--- a/minecraft/Makefile
+++ b/minecraft/Makefile
@@ -1,10 +1,29 @@
 targets += minecraft
 project = $(notdir $(PWD))
-port = 25565:
+port = 25565
+
+ifeq ($(port),)
+PORT=25565
+else
+PORT=$(port):25565
+endif
+
+attach=false
+ifneq ($(attach),true)
+up_opts += --detach
+endif
+
+volumes=false
+ifeq ($(volumes),true)
+down_opts += --volumes
+endif
 
 build:
 	docker compose build $(targets)
 
-up:
-	PORT=$(port) \
-	docker compose --project-name $(project) up --detach
+run:
+	PORT=$(PORT) \
+	docker compose --project-name $(project) up $(up_opts)
+
+clean:
+	docker compose --project-name $(project) down $(down_opts)
